@@ -94,7 +94,7 @@ MGL_DEPENDENT_OPTION(enable-fltk "Enable fltk widget" OFF "NOT enable-lgpl" ON "
 CMAKE_DEPENDENT_OPTION(enable-wx "Enable wxWidget widget" OFF "NOT enable-lgpl" OFF)
 MGL_DEPENDENT_OPTION(enable-qt "Enable Qt4 widget" OFF "NOT enable-lgpl" ON "NOT enable-all-widgets" ON)
 MGL_DEPENDENT_OPTION(enable-python "Enable python interface" OFF "NOT enable-lgpl" ON "NOT enable-all-swig" ON)
-MGL_DEPENDENT_OPTION(enable-lua51 "Enable Lua 5.1 interface" OFF "NOT enable-lgpl" ON "NOT enable-all-swig" ON)
+MGL_DEPENDENT_OPTION(enable-lua "Enable Lua (v.5.1) interface" OFF "NOT enable-lgpl" ON "NOT enable-all-swig" ON)
 MGL_DEPENDENT_OPTION(enable-octave "Enable octave interface" OFF "NOT enable-lgpl" ON "NOT enable-all-swig" ON)
 MGL_DEPENDENT_OPTION(enable-octave-install "Octave interface will install for all users" ON "NOT enable-lgpl" ON "NOT enable-all-swig" ON)
 
@@ -378,16 +378,16 @@ else(enable-python)
 	set(MGL_HAVE_PYTHON 0)
 endif(enable-python)
 
-if(enable-lua51)
+if(enable-lua)
 	set(MGL_HAVE_SWIG 1)
-	set(MGL_HAVE_LUA51 1)
+	set(MGL_HAVE_LUA 1)
 	INCLUDE(FindLua51)
 	if(NOT LUA51_FOUND)
 		message(SEND_ERROR "Couldn't find Lua 5.1 library.")
 	endif(NOT LUA51_FOUND)
-else(enable-lua51)
-	set(MGL_HAVE_LUA51 0)
-endif(enable-lua51)
+else(enable-lua)
+	set(MGL_HAVE_LUA 0)
+endif(enable-lua)
 
 
 if(enable-octave)
