@@ -1088,7 +1088,7 @@ public:
 	/// Draw semitransparent dots in points {x,y,z} with specified alpha a.
 	inline void Dots(const mglDataA &x, const mglDataA &y, const mglDataA &z, const mglDataA &a, const char *sch="", const char *opt="")
 	{	mgl_dots_a(gr, &x, &y, &z, &a, sch, opt);	}
-	/// Draw semitransparent dots in points {x,y,z} with specified alpha a.
+	/// Draw semitransparent dots in points {x,y,z} with specified color c and alpha a.
 	inline void Dots(const mglDataA &x, const mglDataA &y, const mglDataA &z, const mglDataA &c, const mglDataA &a, const char *sch="", const char *opt="")
 	{	mgl_dots_ca(gr, &x, &y, &z, &c, &a, sch, opt);	}
 	/// Draw surface reconstructed for points in arrays {x,y,z}.
