@@ -31,15 +31,15 @@ if(MGL_HAVE_PYTHON)
 	set(mgl_clean_files ${mgl_clean_files} mathgl.py)
 endif(MGL_HAVE_PYTHON)
 
-if(MGL_HAVE_LUA51)
+if(MGL_HAVE_LUA)
 	include_directories(${LUA_INCLUDE_DIR})
-	set(SWIG_MODULE_mgl-lua51_EXTRA_DEPS numpy.i ${src_imp_dep})
-	SWIG_ADD_MODULE(mgl-lua51 lua mathgl.i)
-	SWIG_LINK_LIBRARIES(mgl-lua51 mgl ${LUA_LIBRARIES})
-	set_target_properties(mgl-lua51 PROPERTIES PREFIX "" BUILD_WITH_INSTALL_RPATH ON)
+	set(SWIG_MODULE_mgl-lua_EXTRA_DEPS numpy.i ${src_imp_dep})
+	SWIG_ADD_MODULE(mgl-lua lua mathgl.i)
+	SWIG_LINK_LIBRARIES(mgl-lua mgl ${LUA_LIBRARIES})
+	set_target_properties(mgl-lua PROPERTIES PREFIX "" BUILD_WITH_INSTALL_RPATH ON)
 
-	install (TARGETS mgl-lua51 LIBRARY DESTINATION ${MGL_LIB_INSTALL_DIR})
-endif(MGL_HAVE_LUA51)
+	install (TARGETS mgl-lua LIBRARY DESTINATION ${MGL_LIB_INSTALL_DIR})
+endif(MGL_HAVE_LUA)
 
 if(MGL_HAVE_OCTAVE)
 	execute_process(COMMAND ${oct_prog} -p CANONICAL_HOST_TYPE
